--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm install && npm run build:css && npm run build:js",
+    "build:css": "node-sass src/styles/main.scss dist/css/main.css",
+    "build:js": "mkdir -p dist/js && cp node_modules/bootstrap/dist/js/bootstrap.bundle.min.js dist/js/"
   },
   "keywords": [],
   "author": "",
