--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "npm install && npm run build:css && npm run build:js",
-    "build:css": "node-sass src/styles/main.scss dist/css/main.css",
-    "build:js": "mkdir -p dist/js && cp node_modules/bootstrap/dist/js/bootstrap.bundle.min.js dist/js/"
+    "build:css": "node-sass node_modules/dist/bootstrap/css/bootstrap.scss dist/css/bootstrap.min.css",
+    "build:js": "mkdir -p dist/js && cp ./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js dist/js/"
   },
   "keywords": [],
   "author": "",
