--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npm i @flaticon/flaticon-uicons && npm i bootstrap"
+    "build": "npm install"
   },
   "keywords": [],
   "author": "",
